Blink Scheduler: Fix crash in TaskQueueImpl::AsValueInto().

Bug: 773718
Change-Id: I81799df28412adb81742e45bbbed63e4d256d847